Фиксируем рабочее состояние import/export. Модуль product переделан